--- a/templates/time/entry-detailed.html
+++ b/templates/time/entry-detailed.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <h1 class="my-2">Enter Time</h1>
+    {% include "_form_errors.html" %}
     <form method="POST">
         {{ form.csrf_token }}
         <div class="form-row">
